scss/layouts/_mobile-menu.scss
.mobile-menu {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 16px 20px;
  background-color: var(--color-primary-light);
  transform: translate(100%);
  transition-duration: 0.3s;

  &.is-open {
    transform: translate(0);
  }

  &__close {
    position: absolute;
    top: 24px;
    right: 24px;
    border: none;
    background-color: transparent;
  }

  &__logo {
    margin-bottom: 32px;
  }

  &__menu {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin-bottom: 24px;
  }

  &__socials {
    display: flex;
    align-items: center;
    gap: 12px;
  }
}

